--- a/finals/gear_creator/ui/gear-creator.ui
+++ b/finals/gear_creator/ui/gear-creator.ui
@@ -43,7 +43,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Gear Radius</string>
+    <string>Gear Height</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
